--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,4 @@ spring.application.name=S-Mart
 # MongoDB Configuration
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
-spring.data.mongodb.database=smart_db
+spring.data.mongodb.database=smart_d
